version/stable/_sources/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/MaterialObject/MaterialModel.rst.txt
.. vale off



:class:`MaterialModel`
======================

.. py:class:: ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.MaterialObject.MaterialModel

   Bases: :py:obj:`object`


   
   The material model class holds the data for a particular material model. Examples of a material model would be;: density, isotropic elasticity, or gasket model.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MaterialModel

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~MaterialProperty`
            - The MaterialModel is represented by a IMaterialProperty (e.g. Gasket Model) or an IMaterialPropertyData (e.g. Isotropic Elasticity)
          * - :py:attr:`~MaterialPropertyData`
            - MaterialPropertyData property.
          * - :py:attr:`~Name`
            - Gets the name that identifies the material model
          * - :py:attr:`~Suppressed`
            - Gets or sets whether this material model should be used in the analysis.







Property detail
---------------
.. py:property:: MaterialProperty
   :type: Optional[Ansys.EngineeringData.Material.IMaterialProperty]


   
   The MaterialModel is represented by a IMaterialProperty (e.g. Gasket Model) or an IMaterialPropertyData (e.g. Isotropic Elasticity)
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialPropertyData
   :type: Optional[Ansys.EngineeringData.Material.IMaterialPropertyData]


   
   MaterialPropertyData property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the name that identifies the material model 
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets whether this material model should be used in the analysis.
















   ..
       !! processed by numpydoc !!







.. vale on